<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/usernameTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Tasks"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="ADD TASK"
        app:layout_constraintBaseline_toBaselineOf="@+id/allTasksButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/allTasksButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="16dp"
        android:text="All Tasks"
        app:layout_constraintEnd_toStartOf="@+id/settingB"
        app:layout_constraintStart_toEndOf="@+id/addTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/usernameTaskTitle" />

    <Button
        android:id="@+id/settingB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/allTasksButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskList"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/list_background"
        android:padding="10dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTaskTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>