<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".activities.AddTask"
    tools:visibility="visible">

    <EditText
        android:id="@+id/taskBodyInput"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/do_something"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionLabel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="204dp"
        android:text="@string/add_task"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskTitleInput"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_task"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleLabel" />

    <Button
        android:id="@+id/addTaskB"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStateSpinner" />

    <TextView
        android:id="@+id/totalTaskView"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_tasks_0"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskB" />

    <TextView
        android:id="@+id/taskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="54dp"
        android:labelFor="@id/taskTitleInput"
        android:text="@string/task_title"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/taskBodyInput"
        android:text="@string/text_description"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleInput" />

    <Spinner
        android:id="@+id/taskStateSpinner"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="47dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyInput" />

</androidx.constraintlayout.widget.ConstraintLayout>